--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,3 +1,5 @@
 steps:
   - name: ":node:"
-    command: "npm install && npm test && npm i -g yarn"
+    command: "npm install && npm test"
+  - name: ":yarn:"
+    command: "yarn lint"
